components/Header/Header/Header.module.scss
@import "@/styles/_variables.scss";

.header {
	background-color: darken($primary, 0%);
	padding: 0.8rem 0;
	flex: 1;
	height: 64px;
	position: fixed;
	z-index: 2;
	top: 0;
	right: 0;
	left: 0;
	display: flex;
	justify-content: flex-end;
	box-shadow: 0 25px 15px -15px rgba(24, 21, 41, 0.1);
	color: white;
}

.wrapper {
	display: flex;
	justify-content: space-between;
	align-items: center;
	height: 100%;
}

.title {
	font-size: 28px;
	font-weight: bold;
	color: white;

	font-family: "Newreader", serif;
}

.right {
	display: flex;
	gap: 1.5rem;
	align-items: center;
	height: 100%;
}

.icon {
	display: flex;
	height: 20px;
	svg {
		height: 100%;
	}
}

